test/corpus/synatx_emphasis.txt
====================
simple emphasis star
====================
*some text*

-----------

(source_file
  (content
    (paragraph
      (emph
        (emph_start)
        (word)
        (word)
        (emph_end))
      (line_end)
      (paragraph_end
        (MISSING line_end)))))

==========================
simple emphasis underscore
==========================
_some text_

--------

(source_file
  (content
    (paragraph
      (emph
        (emph_start)
        (word)
        (word)
        (emph_end))
      (line_end)
      (paragraph_end
        (MISSING line_end)))))
